--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "auth-react-router": "^0.1.5",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
